# AD3Control

./: CMakeLists.txt  Makefile  README.md  main.cc  main_dev.cpp
WF_SDK/: device.cpp  device.h  dmm.h  logic.h  pattern.cpp  pattern.h  scope.h  static.h  supplies.h  tools.h  wavegen.h
WF_SDK/protocol/: i2c.h  spi.h  uart.h
